Added footer and socia media links, styled links

--- a/code/index.html
+++ b/code/index.html
@@ -7,11 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" 
      rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   <body>
     <header>
       <!-- Logo and navbar -->
-      <img src="./Images/Resurs3.png" alt="Backstreet News Logo" />
+      <img src="./Images/logo.png" alt="Backstreet News Logo" />
       <nav>
         <a href="#">BRIAN</a>
         <a href="#">KEVIN</a>
@@ -42,73 +43,7 @@
             culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
       </section>
-
-      <!-- Small news grid  -->
-      <section class="wrapper">
-        <div>
-          <h3>Backstreet Boy Men</h3>
-          <p>Who is YOUR favourite?</p>
-        </div>
-        <section class="grid-articles">
-          <div class="item">
-            <a href="#">
-              <div class="polaroid">
-                <img src="./Images/brian.jpg" alt="Brian">
-                <h4>Here's Brian!</h4> 
-              </div>
-            </a>
-          </div>
-          <div class="item">
-            <a href="#">
-              <div class="polaroid">
-                <img src="./Images/brian.jpg" alt="Brian">
-                <h4>Here's Brian!</h4> 
-              </div>
-            </a>
-          </div>
-          <div class="item">
-            <a href="#">
-              <div class="polaroid">
-                <img src="./Images/brian.jpg" alt="Brian">
-                <h4>Here's Brian!</h4> 
-              </div>
-            </a>
-          </div>
-          <div class="item">
-            <a href="#">
-              <div class="polaroid">
-                <img src="./Images/brian.jpg" alt="Brian">
-                <h4>Here's Brian!</h4> 
-              </div>
-            </a>
-          </div>
-          <div class="item">
-            <a href="#">
-              <div class="polaroid">
-                <img src="./Images/brian.jpg" alt="Brian">
-                <h4>Here's Brian!</h4> 
-              </div>
-            </a>
-          </div>
-          <div class="item">
-            <a href="#">
-              <div class="polaroid">
-                <img src="./Images/brian.jpg" alt="Brian">
-                <h4>Here's Brian!</h4> 
-              </div>
-            </a>
-          </div>
-          <div class="item">
-            <a href="#">
-              <div class="polaroid">
-                <img src="./Images/brian.jpg" alt="Brian">
-                <h4>Here's Brian!</h4> 
-              </div>
-            </a>
-          </div>
-        </section>
-      </section>
-      
+    
       <!-- Small news flexbox  -->
       <section class="wrapper">
         <div>
@@ -138,9 +73,71 @@
           </a>
         </section>
       </section>
+
+      <!-- Small news grid  -->
+      <section class="wrapper">
+        <div>
+          <h3>Backstreet Boy Men</h3>
+          <p>Who is YOUR favourite?</p>
+        </div>
+        <section class="grid-articles">
+          <div class="item">
+            <a href="#">
+              <div class="polaroid">
+                <img src="./Images/brian.jpg" alt="Brian">
+                <h4>Brian!</h4> 
+              </div>
+            </a>
+          </div>
+          <div class="item">
+            <a href="#">
+              <div class="polaroid">
+                <img src="./Images/kevin.jpg" alt="Kevin">
+                <h4>Kevin!</h4> 
+              </div>
+            </a>
+          </div>
+          <div class="item">
+            <a href="#">
+              <div class="polaroid">
+                <img src="./Images/howie.jpg" alt="Howie D">
+                <h4>Howie D!</h4> 
+              </div>
+            </a>
+          </div>
+          <div class="item">
+            <a href="#">
+              <div class="polaroid">
+                <img src="./Images/nick.jpg" alt="Nick">
+                <h4>Nick?</h4> 
+              </div>
+            </a>
+          </div>
+          <div class="item">
+            <a href="#">
+              <div class="polaroid">
+                <img src="./Images/aj.jpg" alt="AJ">
+                <h4>AJ!</h4> 
+              </div>
+            </a>
+          </div>
+        </section>
+      </section>
     </main> 
 
     <!-- Footer -->
-    <footer></footer>
+    <footer>  
+      <div class="footer">
+        <p>Follow the boys </p>
+        <div>
+        <a href="https://www.instagram.com/backstreetboys/?hl=sv" target="_blank">
+          <i class="fa fa-instagram" aria-hidden="true"></i></a>
+        <a href="https://www.facebook.com/backstreetboys" target="_blank">
+          <i class="fa fa-facebook" aria-hidden="true"></i></a>
+        <a href="https://twitter.com/backstreetboys" target="_blank">
+          <i class="fa fa-twitter" aria-hidden="true"></i></a>
+      </div>
+      </div>
+    </footer>
   </body>
 </html>
