Improved header and updated ReadMe

--- a/code/index.html
+++ b/code/index.html
@@ -22,6 +22,9 @@
       <img src="./images/paw-solid.svg" alt="logo">
       <div>SANDRINE'S<br>DOG RESCUE</div>
     </div>
+    <div class="logo">
+      <img src="./images/paw-solid.svg" alt="logo">
+    </div>
     <nav>
       <a class="link1" href="#">ADOPTION</a>
       <a class="link2" href="#">DONATION</a>
