--- a/code/index.html
+++ b/code/index.html
@@ -34,13 +34,15 @@
         <div>
           <h2>Backstreet's back, alright!</h2>
           <h4>Student poll shows Brian is the most popular Backstreet Boy</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut 
             enim ad minim veniam, quis nostrud exercitation ullamco laboris
             nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in
             reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
             pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
-            culpa qui officia deserunt mollit anim id est laborum.</p>
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
         </div>
       </section>
     
