Added favicon, finished the news section and updated README.

--- a/code/index.html
+++ b/code/index.html
@@ -21,7 +21,7 @@
       <ul class="main-nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">Archive</a></li>
+        <li><a href="#">Blog</a></li>
         <li><a href="#">Subscribe</a></li>
       </ul>
     </header> 
@@ -82,11 +82,11 @@
         </article>
 
         <article class="news-article">
-          <img src="img/katja-vogt-CipURjPCXOo-unsplash.jpg" alt="Coffee mug">
+          <img src="img/kari-shea-1e5V69AQjgA-unsplash.jpg" alt="Coffee dessert">
           <div>
-            <h2 class="category-heading"> 2020 - 08 - 29 | GUIDE </h2>
-            <h3>??????</h3>
-            <p>?????</p>
+            <h2 class="category-heading"> 2020 - 08 - 29 | RECIPES </h2>
+            <h3>Incredible coffee desserts</h3>
+            <p>Try out our recipes for amazing coffee drinks and desserts.</p>
           </div>
           <a class="button" href="#">Read more &#9749;</a>
         </article>
@@ -107,18 +107,19 @@
             <h2 class="category-heading"> 2020 - 08 - 29 | GUIDE </h2>
             <h3>Coffee Brewing Methods</h3>    
             <p>
-              French press, espresso machines or pour over/drip brewing? Find your favourite.     
+              French press, espresso machines or pour over/drip brewing? Find your favourite way of brewing.     
             </p>
           </div>
           <a class="button" href="#">Read more &#9749;</a>
         </article>
 
         <article class="news-article">
-          <img src="img/tyler-nix-yGb2igKldYg-unsplash.jpg" alt="Barista pouring coffe "> 
+          <img src="img/milo-miloezger-rKYRJu0n06Y-unsplash.jpg" alt="Barista pouring coffe "> 
           <div>
-            <h3>Barista Challenge 2020</h3>    
+            <h2 class="category-heading"> 2020 - 08 - 29 | QUIZ </h2>
+            <h3>Fun facts</h3>    
             <p>
-              The date is set for barista challenge 2020! Do you have what it takes?            
+              <i>Is coffee a fruit or a vegetable?</i> Take our test and see how much you know about coffee.           
             </p>
             <a class="button" href="#">Read more &#9749;</a>     
           </div>
