Updates on READme file

--- a/code/index.html
+++ b/code/index.html
@@ -47,7 +47,7 @@
 
     <!-- News card grid-->
     <div class="news_cards">
-      <div class="card"><img src="../assets/corona_1.jpg" alt="Stay at home"><p>Corona from home</p></div>
+      <div class="card"><img src="../assets/corona_1.jpg" alt="Stay at home"><p>Corona from home</psta></div>
       <div class="card"><img src="../assets/corona_2.jpg" alt="Corona game"><p>Games at home></p></div>
       <div class="card"><img src="../assets/corona_bignews.jpg" alt="Social distancing"><p>Keep your distance</p></div>
       <div class="card"><img src="../assets/corona_4.jpg" alt="Social distancing"><p> Social distance</p></div>
