Final webpage with minor styling changes

--- a/code/index.html
+++ b/code/index.html
@@ -7,6 +7,7 @@
   <title>The New Forker</title>
   <link rel="stylesheet" href="./style.css" />
   <link rel="icon" type="image/png" href="./noun_fork.png"/>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -16,7 +17,7 @@
       <div></div>
       <div></div>
     </div>
-    <img class="header-image" src="./The_New_Forker_logo.png" alt="The New Forker logo" />
+    <a href="#"><img class="header-image" src="./The_New_Forker_logo.png" alt="The New Forker logo" /></a>
     <nav>
       <a href="#">Books & Culture</a>
       <a href="#">Crossword</a>
@@ -41,7 +42,8 @@
             consectetur adipiscing elit
             Lorem ipsum dolor sit amet, 
             consectetur adipiscing elit
-            <br><br><br><i><b>Read more ...</b></i>
+            Lorem ipsum dolor sit amet, 
+            consectetur adipiscing elit
           </p>
         </article>
       </div>
@@ -99,13 +101,62 @@
           </p>
         </article>
       </div>
+      <div class="small-news-card">
+        <img src="./troopers-jon-tyson-eIhH7RTlTZA-unsplash.jpg" 
+        alt="Image of storm troopers and Anonymous.">
+        <article>
+          <a href="#">Books & Culture</a>
+          <h2>Lorem ipsum dolor sit amet, 
+            consectetur adipiscing elit
+          </h2>
+          <p>
+            By <b><i>Ticky DeFan.</i></b>
+          </p>
+        </article>
+      </div>
+      <div class="small-news-card">
+        <img src="./tiktok.jpeg" 
+        alt="Image of tiktok text written by a typwriter.">
+        <article>
+          <a href="">Crossword</a>
+          <h2>Lorem ipsum dolor sit amet, 
+            consectetur adipiscing elit
+          </h2>
+          <p>
+            By <b><i>Fanny Svensson</i></b>
+          </p>
+        </article>
+      </div>
+      <div class="small-news-card">
+        <img src="./grafitti.jpg" 
+        alt="Colorful grafitti.">
+        <article>
+          <a href="#">Goings On</a>
+          <h2>Lorem ipsum dolor sit amet, 
+            consectetur adipiscing elit
+          </h2>
+          <p>
+            By <b><i>Foodlaura DeFoodie</i></b>
+          </p>
+        </article>
+      </div>
+      <div class="small-news-card">
+        <img src="./paintings-at-museum.jpg" alt="Museum with paintings.">
+        <article>
+          <a href="#">Fiction & Poetry</a>
+          <h2>Lorem ipsum dolor sit amet, 
+            consectetur adipiscing elit
+          </h2>
+          <p>
+            By <b><i>Robert Robertsson</i></b>
+          </p>
+        </article>
+      </div>
     </section>
   </main>
   <footer>
-    <p><b>rebkova</b>
-      <br>.
-      <br>. 
-      <br>.
+    <p><b>.rebkova.</b>
+      <br>The New Forker : The New Yorker magazine mock-up. 
     </p>
   </footer>
 </body>
