I almost fixed the grid, still half of it working as intended.

--- a/code/index.html
+++ b/code/index.html
@@ -34,14 +34,15 @@
 
     <section class="flex-parent">
   
-      <div class="flex-child one">
+      <div class="flex-child pic">
         <img src="img/foodtour.jpg" alt="Tacos image">
       </div>
         
-      <div class= "flex-child two">
+      <div class= "flex-child txt">
         <h1> Epic streetfood tour in Mexico city!</h1>
         <p> An unconventional gastronomic experience 
-        that you will never forget!</p>
+        that you will never forget! Lorem ipsum dolor, sit amet consectetur adipisicing elit. adipisicing elit.adipisicing elit.adipisicing elit.
+      </p>
       </div>
 
     </section>
