--- a/code/index.html
+++ b/code/index.html
@@ -1,22 +1,134 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
-    <section class="big-news">
-      <!-- The big news content -->
+<head>
+  <meta charset="utf-8" />
+  <title>Todays Inspiration</title>
+  <link rel="icon" href="./only-cat.logo.svg" />
+  <link rel="stylesheet" href="./style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+</head>
+
+<body>
+<!-- Header with logo and nav -->
+  <header>
+    <img class="logoIcon" src="./cat.logo2.svg">
+    <nav>
+      <a href="">DESIGN</a>
+      <a href="">PHOTOGRPHY</a>
+      <a href="">FILM</a>
+      <a href="">ILLUSTRATION</a>
+    </nav>
+    <div class="hamburger">
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
+  </header>
+
+  <!-- Start picture -->
+  <section class="start-picture">
+    <img class="todaysPic" src="./3329759-01.jpg">
+    <div class="ref">
+      <h1>Design by Freepik</h1>
+    </div>
+  </section>
+
+  <!-- Big News  -->
+  <article class="big-arc">
+    <h4>Stay cool</h4>
+    <p>Lorem Ipsum</p>
+    <img src="./chole.gif" alt="">
+  </article>
+
+ <!-- Small News Section  -->
+  <section class="overview">
+    <section class="start-text">
+      <h3 class="date">28/8</h3>
+      <h2 class="autor"><strong>Todays<br>Illustrator:</strong><br>Bäm Stugendal</h2>
     </section>
 
-    <section class="">
-      <!-- The other news  -->
-    </section>
-  </body>
+    <article class="arc">
+      <img src="./rangnarak.jpg">
+      <h4>Ragnarök</h4>
+      <p>Lorem Ipsum</p>
+    </article>
+
+    <article class="arc">
+      <img src="./Miss_Fireworks_Ani.gif">
+      <h4>Miss Fireworks</h4>
+      <p>Lorem Ipsum</p>
+    </article>
+
+    <article class="arc">
+      <img src="./A_girl.jpg">
+      <h4>Chilling</h4>
+      <p>Lorem Ipsum</p>
+    </article>
+
+    <article class="arc">
+      <img src="./plant_cat2.jpg">
+      <h4>Plant Cat</h4>
+      <p>Lorem Ipsum</p>
+    </article>
+
+    <article class="arc">
+      <img src="./Mr_Bubble_Ani.gif">
+      <h4>Mr Bubbles</h4>
+      <p>Lorem Ipsum</p>
+    </article>
+
+    <article class="arc">
+      <img src="./a_girl3.jpg">
+      <h4>Good Hair day</h4>
+      <p>Lorem Ipsum</p>
+    </article>
+
+    <article class="arc">
+      <img src="./fuse.jpg">
+      <h4>Fuse</h4>
+      <p>Lorem Ipsum</p>
+    </article>
+
+    <article class="arc">
+      <img src="./cats.jpg">
+      <h4>Liquid cats</h4>
+      <p>Lorem Ipsum</p>
+    </article>
+
+    <article class="arc">
+      <img src="./a_girl2.jpg">
+      <h4>Aqua</h4>
+      <p>Lorem Ipsum</p>
+    </article>
+
+    <article class="arc">
+      <img src="./house.jpg">
+      <h4>House</h4>
+      <p>Lorem Ipsum</p>
+    </article>
+
+    <article class="arc">
+      <img src="./flying_cat.jpg">
+      <h4>Rocket Cat</h4>
+      <p>Lorem Ipsum</p>
+    </article>
+
+    <article class="arc">
+      <img src="./frukost1.jpg">
+      <h4>Breakfest</h4>
+      <p>Lorem Ipsum</p>
+    </article>
+  </section>
+
+ <!-- Footer  -->
+  <footer>
+    <p>Made by Bäm Stugendal</p>
+    <div class="logo-social">
+      <a href="https://www.instagram.com/illustration.bam/"><img src="./Instagram_2.svg">
+      <a href="https://github.com/BamStugendal?tab=repositories"><img src="./Github_2.svg">
+  </div>
+  </footer>
+</body>
+
 </html>
