added javascript animation to .hamburger in phone-mode

--- a/code/index.html
+++ b/code/index.html
@@ -23,9 +23,9 @@
 
   <nav>
     <div class="hamburger">
+      <div class="line"></div><!-- 
       <div class="line"></div>
-      <div class="line"></div>
-      <div class="line"></div>
+      <div class="line"></div> -->
     </div>
     <ul class="nav-links">
       <li class="link"><a href="#">Home</a></li>
@@ -108,6 +108,7 @@
     </section>
   </main>
 
+  <script src="script.js"></script>
 </body>
 
 </html>
