moved code files up to ease deployment on Netlify

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header>
-    <img class="logo" src="../images/environnews-logo.png" alt="environnews-logo">
+    <img class="logo" src="./images/environnews-logo.png" alt="environnews-logo">
     <nav class="big-screen-nav">
       <a href="#">LATEST NEWS</a>
       <a href="#">WILDLIFE</a>
@@ -21,7 +21,7 @@
 
   <main>
     <div class="big-news">
-      <img src="../images/fruit-peel.jpg" alt="fruit peel image">
+      <img src="./images/fruit-peel.jpg" alt="fruit peel image">
       <div class="big-news-text">
         <h1>Scientists Use Fruit Peel to Turn Old Batteries Into New</h1>
         <p>Scientists have developed a novel method of using fruit peel waste to extract and reuse precious metals from
@@ -33,38 +33,38 @@
 
     <div class="other-news">
       <div class="other-news-card">
-        <img src="../images/lead.jpg" alt="pencil image">
+        <img src="./images/lead.jpg" alt="pencil image">
         <h1>New Device Can Measure Toxic Lead Within Minutes</h1>
       </div>
 
       <div class="other-news-card">
-        <img src="../images/ozone.jpg" alt="sky image">
+        <img src="./images/ozone.jpg" alt="sky image">
         <h1>Experts Reveal Major Holes in International Ozone Treaty</h1>
       </div>
 
       <div class="other-news-card">
-        <img src="../images/rice.jpg" alt="rice field image">
+        <img src="./images/rice.jpg" alt="rice field image">
         <h1>Antagonistic Genes Modify Rice Plant Growth</h1>
       </div>
 
       <div class="other-news-card">
-        <img src="../images/ice.jpg" alt="ice image">
+        <img src="./images/ice.jpg" alt="ice image">
         <h1>Atmospheric Scientists Study Fires to Resolve Ice Question in Climate Models</h1>
       </div>
       <div class="other-news-card">
-        <img src="../images/stars.jpg" alt="ice image">
+        <img src="./images/stars.jpg" alt="ice image">
         <h1>Exploding Stars May Have Caused Mass Extinction on Earth, Study Shows</h1>
       </div>
       <div class="other-news-card">
-        <img src="../images/bighorn-sheep.jpg" alt="ice image">
+        <img src="./images/bighorn-sheep.jpg" alt="ice image">
         <h1>Native Desert Bighorn Sheep in Ecologically Intact Areas Are Less Vulnerable to Climate Change</h1>
       </div>
       <div class="other-news-card">
-        <img src="../images/water.jpg" alt="ice image">
+        <img src="./images/water.jpg" alt="ice image">
         <h1>Water Efficiency Achievable Throughout U.S. Without Decrease in Economic Activity</h1>
       </div>
       <div class="other-news-card">
-        <img src="../images/plant.jpg" alt="ice image">
+        <img src="./images/plant.jpg" alt="ice image">
         <h1>Key Immune System Protein Discovered in Plants</h1>
       </div>
     </div>
