--- a/code/index.html
+++ b/code/index.html
@@ -74,6 +74,6 @@
     
    
     
-    <footer><p>&copy; Joel Harde 2020</p><a href="https://www.linkedin.com/in/joelharde/" target="_blank">LinkedIn</a></footer>
+    <footer><strong>&copy; Joel Harde 2020</strong><a href="https://www.linkedin.com/in/joelharde/" target="_blank">LinkedIn</a></footer>
   </body>
 </html>
